--- a/gb/21/2/6/n12737751.md
+++ b/gb/21/2/6/n12737751.md
@@ -1,11 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/knikkv387/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/knikkv387/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/knikkv387/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/knikkv387/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/knikkv387/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/knikkv387/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/knikkv387/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/knikkv387/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/knikkv387/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/knikkv387/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/knikkv387/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/knikkv387/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/knikkv387/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/knikkv387/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/knikkv387/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/knikkv387/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/knikkv387/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/knikkv387/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/knikkv387/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/knikkv387/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/knikkv387/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/knikkv387/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/knikkv387/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/knikkv387/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>张慧东：绿色能源计划与中共称霸野心</h2>
-
-<h6></h6>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/01/3f6714ed95c6da49c44b85dd64d113e8-600x400.jpg" />
+<h6>【财商天下】拜登能源新政带给美国经济三大影响；受益者另有其人？绿色能源或许更污染？“环保主义”下的过度环保将引狼入室。（大纪元香港新闻中心）
+</h6>
 <hr>
-	<p>【大纪元2021年02月07日讯】<ahref="https://github.com/knikkv387/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>上任当周就签署总统行政令，取消Keystone XL石油管道项目的许可，并宣布美国重新加入《<ahref="https://github.com/knikkv387/djy/blob/master/gb/tag/%E5%B7%B4%E9%BB%8E%E6%B0%94%E5%80%99%E5%8D%8F%E5%AE%9A.md#1">巴黎气候协定</a>》。外界预计，下一步<ahref="https://github.com/knikkv387/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>政府必然会加大力度推进<ahref="https://github.com/knikkv387/djy/blob/master/gb/tag/%E7%BB%BF%E8%89%B2%E8%83%BD%E6%BA%90%E8%AE%A1%E5%88%92.md#1">绿色能源计划</a>。此前，拜登在竞选期间曾表示，计划投资2万亿美元确保美国实现100％的清洁能源经济，并在2050年之前达到“净零排放”。</p>
+	<p>【大纪元2021年02月07日讯】<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>上任当周就签署总统行政令，取消Keystone XL石油管道项目的许可，并宣布美国重新加入《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B7%B4%E9%BB%8E%E6%B0%94%E5%80%99%E5%8D%8F%E5%AE%9A.md#1">巴黎气候协定</a>》。外界预计，下一步<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>政府必然会加大力度推进<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BB%BF%E8%89%B2%E8%83%BD%E6%BA%90%E8%AE%A1%E5%88%92.md#1">绿色能源计划</a>。此前，拜登在竞选期间曾表示，计划投资2万亿美元确保美国实现100％的清洁能源经济，并在2050年之前达到“净零排放”。</p>
 <h2>废传统能源 损害长远利益</h2>
 <p>众所周知，传统能源的化石燃料（如甲烷等）等技术比较成熟，无论从发电环节、输送环节，一直到用户终端体验，其经济性和稳定性都优于目前应用的太阳能、风电等绿色能源项目。</p>
 <p>尽管“气候变化”的二氧化碳减排问题在科学界仍存在巨大争议，然而在左派控制媒体的大肆渲染下，把本来可以采用先进工艺控制减少排放的传统能源的化石燃料，在媒体中描述为高污染、高排放来源，而太阳能、风能等能源产品在制造及运营时产生的污染问题却避而不谈。</p>
@@ -14,15 +15,15 @@
 <p>以加州为例，加州已建成全美最大的可再生绿色能源装机，并且加州还设置了一系列众多的激进目标，在已经关闭4座天然气发电厂基础上，2020年的目标是至少有33%的电力来自可再生能源，到2030年达到60%，最终在2045年实现100%。</p>
 <p>然而现实是，2020年8月，由于加州连续多日出现创纪录的极高温天气，导致民众用电量激增，前期关闭的传统能源天然气发电厂导致加州电力出现缺口，使得供电量严重短缺。为此，加州电力调度中心CAISO不得不宣布实施轮流停电。</p>
 <p>最令人哭笑不得的是，加州花费了数十亿美元新建的可再生绿色能源电厂和太阳能、风电绿色能源项目来取代传统能源发电，却让加州人在炎炎夏日经历停电痛苦，而且，加州人还要为花费的全美最高单位电价成本买单。<br />
-在此背景下，若一味强推<ahref="https://github.com/knikkv387/djy/blob/master/gb/tag/%E7%BB%BF%E8%89%B2%E8%83%BD%E6%BA%90%E8%AE%A1%E5%88%92.md#1">绿色能源计划</a>，不仅无法实现达到替代传统能源的目标，而且将不可避免造成大量工作岗位流失，引发经济衰退，并对国家利益造成深远的长期损害。</p>
-<h2>借绿色能源议题 显<ahref="https://github.com/knikkv387/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%A7%B0%E9%9C%B8%E9%87%8E%E5%BF%83.md#1">中共称霸野心</a></h2>
+在此背景下，若一味强推<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BB%BF%E8%89%B2%E8%83%BD%E6%BA%90%E8%AE%A1%E5%88%92.md#1">绿色能源计划</a>，不仅无法实现达到替代传统能源的目标，而且将不可避免造成大量工作岗位流失，引发经济衰退，并对国家利益造成深远的长期损害。</p>
+<h2>借绿色能源议题 显<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%A7%B0%E9%9C%B8%E9%87%8E%E5%BF%83.md#1">中共称霸野心</a></h2>
 <p>针对拜登政府推进的绿色能源计划可能导致大量传统能源岗位流失，拜登的气候特使约翰·克里在1月27日表示，目前在传统化石燃料行业工作的人，同样可以在太阳能行业工作。</p>
 <p>而现实情况则是，在过去十年中，中国大陆已建成世界最大的太阳能产业供应链。中共为大力推广绿色能源项目，鼓励出口实施补贴，曾一度遭到欧美国家反倾销调查。从2007年起，中国大陆一直占据世界第一大太阳能生产国地位。在2019年世界太阳能厂商排名中，前10名厂商中有7家来自中国。</p>
 <p>当观察这些中国企业细节，就会发现，这些太阳能厂商从表面上看多是由民营企业组成，其实大多具有中共背景，以2019年中国排名第一的保利协鑫为例，保利协鑫是一家在香港上市的公司，但是其与中共军工背景的保利集团渊源深厚。而且，其大股东是公司创始人朱共山，第二大股东则是中共国务院直属的中国投资有限责任公司，其持股比例高达近20%，无论从公司名称到这种特殊的股权结构，保利协鑫都充满了中共政治色彩。</p>
 <p>在这种情况下，美国的太阳能企业如何与中共政府背景的企业竞争呢？</p>
 <p>那么人们不禁要问中共是在做推广绿色能源的努力吗？以中共国家统计局公布的《2020中国能源大数据报告》为例，从2010～2019年中国发电量总量构成中，火力发电比例以每年2个百分比逐渐降低，从2010的79.2%到2019年的69.6%。然而，据2020年8月大陆媒体披露，中共已经批准超过50个大型火电项目，这意味着减少碳排放仅仅是中共的一句政治谎言而已。</p>
 <p>实质上，中共则是以推广绿色能源为名，通过争夺绿色能源的“世界工厂”地位，实现中共夺取世界霸权的野心。即不断通过倾销来控制能源产品，造成全球产业链过度依赖中共，全面控制全球经济命脉，改变现有国际秩序，对世界各国实行“统战”，遵循中共所制定的“人类命运共同体”规则。</p>
-<p>为遏制中共霸权野心，<ahref="https://github.com/knikkv387/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>在四年任期内，采用一系列贸易手段，连破中共设的多个布局。一是，制裁华为等中共科技公司，破除以华为5G为首的中共控制全球高科技野心；二是，退出<ahref="https://github.com/knikkv387/djy/blob/master/gb/tag/%E5%B7%B4%E9%BB%8E%E6%B0%94%E5%80%99%E5%8D%8F%E5%AE%9A.md#1">巴黎气候协定</a>，破除中共控制绿色能源全球产业链；三是，通过美中贸易战，破除中共实施补贴和倾销手段主导国际市场；四是，启动司法调查，破除中共实施“中国制造2025”和“千人计划”等非法手段全面渗透、颠覆美国的野心。通过上述努力，把中共的真正面目和谋取世界霸权的野心曝光于天下。</p>
+<p>为遏制中共霸权野心，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>在四年任期内，采用一系列贸易手段，连破中共设的多个布局。一是，制裁华为等中共科技公司，破除以华为5G为首的中共控制全球高科技野心；二是，退出<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%B7%B4%E9%BB%8E%E6%B0%94%E5%80%99%E5%8D%8F%E5%AE%9A.md#1">巴黎气候协定</a>，破除中共控制绿色能源全球产业链；三是，通过美中贸易战，破除中共实施补贴和倾销手段主导国际市场；四是，启动司法调查，破除中共实施“中国制造2025”和“千人计划”等非法手段全面渗透、颠覆美国的野心。通过上述努力，把中共的真正面目和谋取世界霸权的野心曝光于天下。</p>
 <p>拜登政府接下来如何施政，是放弃上届政府努力，让中共获得喘息机会，再次肆意渗透和盗窃美国，实现中共称霸世界野心呢？还是保持强力施压中共，保持美国一直承担的世界领导力责任，全面遏制中共对自由世界乃至人类社会的威胁，这些都有待观察。</p>
 <p>责任编辑：高义</p>
 	
@@ -30,41 +31,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/17/6/1/n9214875.md#1">震动全球 川普宣布退出巴黎气候协定</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/18/12/9/n10900318.md#1">魔鬼在统治着我们的世界(26)：全球野心(上)</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/8/18/n12341136.md#1">加州热浪下轮流断电 川普批民主党能源政策失败</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/21/1/22/n12704083.md#1">专家：拜登重入巴黎协议 将会毁灭美国经济</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/6/1/n9214875.md#1">震动全球 川普宣布退出巴黎气候协定</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900318.md#1">魔鬼在统治着我们的世界(26)：全球野心(上)</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/8/18/n12341136.md#1">加州热浪下轮流断电 川普批民主党能源政策失败</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/1/22/n12704083.md#1">专家：拜登重入巴黎协议 将会毁灭美国经济</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/15/n10785014.md#1" target="_blank">共产暴政录：镇压“反革命”运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11245885.md#1" target="_blank">新泽西州参众议院联合决议褒奖法轮大法日</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/6/n11029000.md#1" target="_blank">林辉：救了毛周的人 结局大多很惨</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/11/n11250223.md#1" target="_blank">美国北德州十城市宣布 法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/1/18/n11802942.md#1">【思想领袖】贾勒特：针对川普的“政治迫害”</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/3/23/n11967279.md#1">【直播回放】3.23纽约州疫情发布会</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/3/23/n11967686.md#1">【直播回放】纽约州长库默考察临时医院建设</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/3/22/n11962674.md#1">意大利口罩被谁买空？意媒驳中共救援谎言</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/3/21/n11962082.md#1">【最新疫情3.22】川普启动三州国民警卫队</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/3/22/n11963263.md#1">【一线采访】武汉市民：对政府彻底失望</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/3/22/n11963031.md#1">胞弟成为台湾女婿 瑞莎曝婚礼照喊开心</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/3/22/n11964501.md#1">湖北病例零增长？台湾网红:中共谎言害惨世界</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/3/21/n11962008.md#1">好莱坞制作人瓦特染疫：身体像被巴士撞到</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/3/22/n11962469.md#1">轻症感染者最好在家隔离  美医师：出现3状况快就医</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/3/21/n11961666.md#1">台：轻症者符合5条件 采1次不用住院隔离</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/3/23/n11966216.md#1">丹麦超市出奇招 遏制民众囤积洗手液</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/3/20/n11959811.md#1">这些医护人员守在第一线！抗疫背后你不知的辛劳</a></li>
-<li><a href="https://github.com/knikkv387/djy/blob/master/gb/20/3/19/n11953749.md#1">一只北极熊胖680公斤 摄影师：它爱吃又被养胖</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614217.md#1">【财商天下】被踢出SWIFT 俄金融迅速“休克”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/knikkv387/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/knikkv387/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/2/6/n12737751.htm">张慧东：绿色能源计划与中共称霸野心</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/2/6/n12737751.htm">张慧东：绿色能源计划与中共称霸野心</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/knikkv387/djy/blob/master/gb/21/2/6/n12737751.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/knikkv387/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/knikkv387/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/knikkv387/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/knikkv387/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/knikkv387/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/2/6/n12737751.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
